// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Untangle render scenarios > mid-drag frame: the grabbed vertex renders as COL_DRAGPOINT 1`] = `
[
  {
    "colour": 1,
    "h": 320,
    "op": "rect",
    "rgb": "rgb(211, 211, 211)",
    "w": 320,
    "x": 0,
    "y": 0,
  },
  {
    "colour": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 2,
    "x2": 317,
    "y1": 2,
    "y2": 2,
  },
  {
    "colour": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 317,
    "x2": 317,
    "y1": 2,
    "y2": 317,
  },
  {
    "colour": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 317,
    "x2": 2,
    "y1": 317,
    "y2": 317,
  },
  {
    "colour": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 2,
    "x2": 2,
    "y1": 317,
    "y2": 2,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 190,
    "x2": 290,
    "y1": 63,
    "y2": 202,
  },
  {
    "colour": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 190,
    "x2": 79,
    "y1": 63,
    "y2": 49,
  },
  {
    "colour": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 290,
    "y1": 49,
    "y2": 118,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 241,
    "y1": 49,
    "y2": 271,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 79,
    "y1": 49,
    "y2": 271,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 30,
    "y1": 49,
    "y2": 118,
  },
  {
    "colour": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 290,
    "x2": 290,
    "y1": 118,
    "y2": 202,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 290,
    "x2": 241,
    "y1": 118,
    "y2": 271,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 290,
    "x2": 160,
    "y1": 118,
    "y2": 297,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 290,
    "x2": 30,
    "y1": 202,
    "y2": 202,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 290,
    "x2": 79,
    "y1": 202,
    "y2": 49,
  },
  {
    "colour": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 160,
    "y1": 271,
    "y2": 297,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 30,
    "y1": 271,
    "y2": 118,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 160,
    "x2": 30,
    "y1": 297,
    "y2": 202,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 79,
    "x2": 30,
    "y1": 271,
    "y2": 118,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 79,
    "x2": 79,
    "y1": 271,
    "y2": 49,
  },
  {
    "cx": 241,
    "cy": 49,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 290,
    "cy": 118,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 241,
    "cy": 271,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 160,
    "cy": 297,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 79,
    "cy": 271,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 30,
    "cy": 202,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 30,
    "cy": 118,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 290,
    "cy": 202,
    "fill": 8,
    "fillRgb": "rgb(115, 179, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 79,
    "cy": 49,
    "fill": 8,
    "fillRgb": "rgb(115, 179, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 190,
    "cy": 63,
    "fill": 6,
    "fillRgb": "rgb(255, 255, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
]
`;

exports[`Untangle render scenarios > opener frame: edges, crossed-edge red, and all vertices drawn 1`] = `
[
  {
    "colour": 1,
    "h": 320,
    "op": "rect",
    "rgb": "rgb(211, 211, 211)",
    "w": 320,
    "x": 0,
    "y": 0,
  },
  {
    "colour": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 2,
    "x2": 317,
    "y1": 2,
    "y2": 2,
  },
  {
    "colour": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 317,
    "x2": 317,
    "y1": 2,
    "y2": 317,
  },
  {
    "colour": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 317,
    "x2": 2,
    "y1": 317,
    "y2": 317,
  },
  {
    "colour": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 2,
    "x2": 2,
    "y1": 317,
    "y2": 2,
  },
  {
    "colour": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 160,
    "x2": 241,
    "y1": 23,
    "y2": 49,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 160,
    "x2": 241,
    "y1": 23,
    "y2": 271,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 160,
    "x2": 30,
    "y1": 23,
    "y2": 118,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 160,
    "y1": 49,
    "y2": 297,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 79,
    "y1": 49,
    "y2": 271,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 79,
    "y1": 49,
    "y2": 49,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 290,
    "x2": 160,
    "y1": 118,
    "y2": 297,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 290,
    "x2": 30,
    "y1": 118,
    "y2": 202,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 290,
    "x2": 30,
    "y1": 118,
    "y2": 118,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 290,
    "x2": 79,
    "y1": 202,
    "y2": 271,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 290,
    "x2": 30,
    "y1": 202,
    "y2": 202,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 30,
    "y1": 271,
    "y2": 118,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 160,
    "x2": 30,
    "y1": 297,
    "y2": 118,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 160,
    "x2": 79,
    "y1": 297,
    "y2": 49,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 79,
    "x2": 79,
    "y1": 271,
    "y2": 49,
  },
  {
    "colour": 3,
    "op": "line",
    "rgb": "rgb(255, 0, 0)",
    "thickness": 1,
    "x1": 30,
    "x2": 79,
    "y1": 202,
    "y2": 49,
  },
  {
    "cx": 160,
    "cy": 23,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 241,
    "cy": 49,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 290,
    "cy": 118,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 290,
    "cy": 202,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 241,
    "cy": 271,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 160,
    "cy": 297,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 79,
    "cy": 271,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 30,
    "cy": 202,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 30,
    "cy": 118,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 79,
    "cy": 49,
    "fill": 5,
    "fillRgb": "rgb(0, 0, 255)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
]
`;
